--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ section {
   right: 0;
   -webkit-box-shadow: var(--box-shadow);
           box-shadow: var(--box-shadow);
-  padding: 1.5rem 10%;
+  padding: 0.5rem 5%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -148,142 +148,57 @@ section {
   display: none;
 }
 
-.header .search-form {
-  position: absolute;
-  top: 120%;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  width: 70rem;
-  background: var(--white);
-  -webkit-box-shadow: var(--box-shadow);
-          box-shadow: var(--box-shadow);
-  padding: 1rem;
+.header #close-menu-info{
   display: none;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 1rem;
-  -webkit-animation: fadeIn .2s linear;
-          animation: fadeIn .2s linear;
 }
 
-.header .search-form.active {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.header .search-form input {
-  width: 100%;
-  padding: 1.2rem 1.4rem;
-  background: var(--light-bg);
-  font-size: 1.6rem;
-  color: var(--light-color);
-}
-
-.header .search-form label {
-  font-size: 2.5rem;
-  color: var(--black);
-  cursor: pointer;
-  margin: 0 1rem;
-}
-
-.header .search-form label:hover {
-  color: var(--yellow);
-}
-
-.header .login-form {
-  position: absolute;
-  top: 120%;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  width: 40rem;
+@media(max-width: 767px){
+  .navbar {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 30rem;
   background: var(--white);
-  -webkit-box-shadow: var(--box-shadow);
-          box-shadow: var(--box-shadow);
-  padding: 2rem;
+  height: 100%;
+  align-items: center;
   text-align: center;
-  -webkit-animation: fadeIn .2s linear;
-          animation: fadeIn .2s linear;
+  z-index: 1100;
+  padding: 0 2rem;
+  padding-top: 5rem;
   display: none;
-}
+  }
 
-.header .login-form.active {
+  .header #menu-btn {
+    display: inline-block;
+  }
+
+  
+.header #close-menu-info{
   display: block;
 }
 
-.header .login-form h3 {
-  font-size: 2.5rem;
-  color: var(--black);
-  text-transform: capitalize;
-  padding-bottom: 1rem;
-  text-transform: uppercase;
-}
+  .header .navbar.active {
+    -webkit-box-shadow: 0 0 0 100vw rgba(0, 0, 0, 0.7);
+          box-shadow: 0 0 0 100vw rgba(0, 0, 0, 0.7);
+    display: block;
+  }
 
-.header .login-form .box {
-  width: 100%;
-  padding: 1.2rem 1.4rem;
-  background: var(--light-bg);
-  font-size: 1.6rem;
-  color: var(--light-color);
-  margin: .7rem 0;
-}
+  .navbar #close-menu-info {
+    position: absolute;
+    top: 1rem;
+    right: 1.5rem;
+    cursor: pointer;
+    font-size: 4rem;
+    color: var(--black);
+  }
 
-.header .login-form .flex {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: .5rem;
-  padding-top: 1.5rem;
-  padding-bottom: 1rem;
-}
-
-.header .login-form .flex label {
-  font-size: 1.5rem;
-  color: var(--light-color);
-  cursor: pointer;
-}
-
-.header .login-form .flex a {
-  font-size: 1.5rem;
-  color: var(--light-color);
-  margin-left: auto;
-}
-
-.header .login-form .flex a:hover {
-  color: var(--yellow);
-  text-decoration: underline;
-}
-
-.header .login-form .btn {
-  width: 100%;
-}
-
-.header .login-form p {
-  font-size: 1.5rem;
-  color: var(--light-color);
-  line-height: 2;
-  padding-top: 1.5rem;
-}
-
-.header .login-form p a {
-  color: var(--yellow);
-}
-
-.header .login-form p a:hover {
-  text-decoration: underline;
 }
 
 .contact-info {
   position: fixed;
   top: 0;
   right: 0;
-  width: 35rem;
+  width: 30rem;
   background: var(--white);
   height: 100%;
   text-align: center;
@@ -401,6 +316,7 @@ section {
 		transform: scale(1);
 	}
 }
+
 .containers{
 	max-width: 1170px;
 	margin:auto;
@@ -508,10 +424,16 @@ section {
 
 /*responsive*/
 @media(max-width: 767px){
+  .home .caption a{
+    padding: 10px 15px;
+  }
+
 	.controls{
 		display: none;
 	}
 }
+
+/* About */
 
 .about .row {
   display: -webkit-box;
@@ -584,6 +506,12 @@ section {
   color: var(--light-color);
   line-height: 2;
   padding-top: .2rem;
+}
+
+@media(max-width: 767px){
+  .about .row .video video {
+    width: 500px;
+  }  
 }
 
 /* Staff */
