--- a/css/style.css
+++ b/css/style.css
@@ -510,10 +510,10 @@ section {
 
 @media(max-width: 767px){
   .about .row .video video {
-    width: 500px;
+    width: 300px;
+    align-self: center;
   }  
 }
-
 /* Staff */
 
 .profs {
