--- a/css/style.css
+++ b/css/style.css
@@ -553,8 +553,13 @@ section {
   margin-bottom: 2rem;
 }
 
-.card h3 {
-  margin-bottom: 2rem;
+.card .profdescri{
+  padding-top: 45px;
+}
+
+.card p{
+margin-bottom: 1.5rem;
+font-size: medium;
 }
 
 .card img {
@@ -568,7 +573,6 @@ section {
 .card:nth-child(even) img {
   order: 2;
 }
-
 
 @media(max-width:600px) {
   .card {
@@ -585,7 +589,7 @@ section {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (minmax(25rem, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   gap: 2rem;
 }
 
